backend/auth/tests/functional/utils/errors/user.py
"""
Ошибки пользователя.

"""


class UserError:
    NOT_EXISTS = 'Пользователь не существует.'
    ALREADY_EXISTS = 'Пользователь уже существует.'
    NOT_BELONG = 'Роль не принадлежит пользователю.'
